k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-prod
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
      - name: microservice
        image: <JFROG_URL>/microservices:prod # Replace with actual JFrog URL
        ports:
        - containerPort: 8080
