k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-prod
  namespace: prod
spec:
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
