k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-prod
  namespace: prod
spec:
  rules:
    - host: prod.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice-prod
                port:
                  number: 80
